// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test correct example renders CorrectExample without errors 1`] = `
<View>
  <Text>
    This is some text
  </Text>
  <View
    accessibilityRole="button"
    accessibilityStates={Array []}
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <View
      style={
        Array [
          Object {},
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#007AFF",
              "fontSize": 18,
              "padding": 8,
              "textAlign": "center",
            },
          ]
        }
      >
        A button
      </Text>
    </View>
  </View>
</View>
`;

exports[`Test error examples renders ButtonWithinText without errors 1`] = `
<Text>
  <View
    accessibilityRole="button"
    accessibilityStates={Array []}
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <View
      style={
        Array [
          Object {},
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#007AFF",
              "fontSize": 18,
              "padding": 8,
              "textAlign": "center",
            },
          ]
        }
      >
        Test
      </Text>
    </View>
  </View>
</Text>
`;

exports[`Test error examples renders RawTextWithoutText without errors 1`] = `
<View>
  I cannot do this
</View>
`;

exports[`Test error examples renders ViewWithinText without errors 1`] = `
<Text>
  <View>
    I cannot do this
  </View>
</Text>
`;
